# Internship_Projects

Internship_Folder/: Arduino_Multi_Sensors-VL53L1X.ino  Lucas_Kanadi.txt  Multi_Sensors_VL53L1X-ROS.ino  Untitled Diagram(1).html  Untitled Diagram.html  VL53L1X_Sensor_ROS.ino  new file
Internship_Folder/ROS-Depth programs/: How to Install OpenCV 3.4.0 with Python 3 on Raspberry Pi 3 - Life2Coding.html  Installation.txt  Open_CV.txt
Internship_Folder/ROS-Depth programs/Depth/: Commands  SItes  node.cpp
Internship_Folder/Spark_Fun_VL531X_Library/: SparkFun_VL53L1X_Arduino_Library.cpp  SparkFun_VL53L1X_Arduino_Library.h
Internship_Folder/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
Internship_Folder/examples/ATTEMPT/: CMakeLists.txt  Makefile  TEST  cmake_install.cmake
Internship_Folder/examples/DISPLAY_VIDEO/: CMakeLists.txt  DISPLAY  Makefile  cmake_install.cmake  live.avi
Internship_Folder/examples/LUCAS/: CMakeLists.txt  LUCAS  Makefile  cmake_install.cmake
Internship_Folder/examples/Motion_Segmentatin/: CMakeLists.txt  Makefile  Motion  cmake_install.cmake  main.cpp
Internship_Folder/examples/OpticalFlow/: CMakeLists.txt  Makefile  TAREK  cmake_install.cmake
Internship_Folder/examples/OpticalFlow/src/: program.cpp
Internship_Folder/examples/PIXELS_DEPTH/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  PIXELS_DEPTH  cmake_install.cmake
Internship_Folder/examples/PIXELS_DEPTH/src/: program.cpp
Internship_Folder/examples/align/: Makefile  cmake_install.cmake  rs-align
Internship_Folder/examples/capture/: Makefile  cmake_install.cmake  rs-capture  rs-capture.cpp
Internship_Folder/examples/measure/: Makefile  cmake_install.cmake  rs-measure
Internship_Folder/examples/multicam/: Makefile  cmake_install.cmake  rs-multicam
Internship_Folder/examples/pointcloud/: Makefile  cmake_install.cmake  rs-pointcloud
Internship_Folder/examples/post-processing/: Makefile  cmake_install.cmake  rs-post-processing
Internship_Folder/examples/record-playback/: .rs-record-playback.cpp.swp  Makefile  cmake_install.cmake  rs-record-playback  rs-record-playback.cpp
Internship_Folder/examples/save-to-disk/: Makefile  cmake_install.cmake  rs-save-to-disk
Internship_Folder/examples/sensor-control/: Makefile  cmake_install.cmake  (+1 more)
(+27 files in other folders)
